# HongLong_infantry_25_new

Camera/Data/: 041190120445.mvdat  043041420094.mvdat
src/armor_detector/: CMakeLists.txt  README.md  package.xml
src/armor_detector/cmake_modules/: FindG2O.cmake
src/armor_detector/include/armor_detector/: armor_pose_estimator.hpp  ba_solver.hpp  detector.hpp  detector_node.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  types.hpp
src/armor_detector/src/: armor_pose_estimator.cpp  ba_solver.cpp  detector.cpp  detector_node.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp
src/base_interfaces/: CMakeLists.txt  package.xml
src/base_interfaces/msg/: ActionCommand.msg  Armor.msg  Armors.msg  ChassisCommand.msg  DebugOfKinematic.msg  GimbalPose.msg  KinematicStatus.msg  Rqt.msg  Target.msg
src/rm_aimer/aimer/: CMakeLists.txt  README.md  package.xml
src/rm_aimer/aimer/config/: Aimer.yaml  pose_params.yaml
src/rm_aimer/aimer/include/aimer/: Aimer.hpp  KinematicModel.hpp  ModelObserver.hpp
src/rm_aimer/aimer/src/: Aimer.cpp  KinematicModel.cpp  ModelObserver.cpp
src/rm_aimer/rm_pose_solver/: CMakeLists.txt  README.md  package.xml
src/rm_aimer/rm_pose_solver/config/: pose_params.yaml
src/rm_aimer/rm_pose_solver/include/pose_solver/: pose_solver.hpp
src/rm_aimer/rm_pose_solver/launch/: pose_solver.launch.py
src/rm_aimer/rm_pose_solver/src/: pose_solver.cpp
src/rm_gimbal_description/: CMakeLists.txt  package.xml
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver_node.hpp  serial_port.hpp
src/rm_serial_driver/src/: crc.cpp  rm_serial_driver_node.cpp  serial_port.cpp
src/rm_upstart/: rm_watch_dog.sh
src/rm_utils/: CMakeLists.txt  README.md
src/rm_utils/include/rm_utils/: common.hpp  heartbeat.hpp  url_resolver.hpp
src/rm_utils/include/rm_utils/math/: manual_compensator.hpp  particle_filter.hpp  pnp_solver.hpp  trajectory_compensator.hpp  utils.hpp
src/rm_utils/src/: heartbeat.cpp  url_resolver.cpp
src/rm_utils/src/math/: manual_compensator.cpp  pnp_solver.cpp  trajectory_compensator.cpp
src/rm_vision/rm_vision_bringup/: CMakeLists.txt  package.xml
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
src/ros2_hik_camera-main/: CMakeLists.txt
src/ros2_hik_camera-main/config/: camera_params.yaml
src/ros2_hik_camera-main/src/: hik_camera_node.cpp
src/ros2_mindvision_camera/: CMakeLists.txt
src/ros2_mindvision_camera/config/: camera_info.yaml
src/ros2_mindvision_camera/src/: mv_camera_node.cpp
